# LLaVA-Anything

./: .gitignore  README.md  pyproject.toml
checkpoints/apertus-siglip-config/: config.json  processor_config.json  tokenizer_config.json
checkpoints/qwen3-1.7b-clip-base-config/: config.json  processor_config.json  tokenizer_config.json
checkpoints/qwen3-clip-config/: config.json  processor_config.json
configs/deepspeed/: zero2_bf16.json  zero3.json
configs/eval/: vlmevalkit_llava_anything_parrot.json  vlmevalkit_llava_anything_parrot_default_system_prompt.json  vlmevalkit_parrot_7b_mtl_mmbench_dev.json  vlmevalkit_parrot_7b_parrot.json
docs/: background.md  configuration.md  evaluation.md  index.md  inference.md  installation.md  quickstart.md  roadmap.md  training.md
docs/architecture/: adr-001-hf-native-composition.md
docs/development/: handoff-2026-05-19.md  roadmap.md
examples/: apertus_siglip.yaml  qwen3_1_7b_clip_base_pretrain.yaml  qwen3_clip.yaml
examples/apertus/: apertus_8b_clipl_anyres.yaml  apertus_8b_clipl_anyres_pretrain.yaml  apertus_8b_fare2clip_anyres.yaml  apertus_8b_fare2clip_anyres_pretrain.yaml  apertus_8b_siglip2_anyres.yaml  apertus_8b_siglip2_anyres_pangea_tuned_4gpu.yaml  apertus_8b_siglip2_anyres_pangea_tuned_4gpu_4k_ds3.yaml  apertus_8b_siglip2_anyres_pangea_tuned_4gpu_6k.yaml  apertus_8b_siglip2_anyres_pangea_tuned_4gpu_test.yaml  apertus_8b_siglip2_anyres_pangea_tuned_8gpu.yaml  apertus_8b_siglip2_anyres_pretrain.yaml  apertus_8b_siglip2_anyres_pretrain_4gpu.yaml  apertus_8b_siglip2_anyres_pretrain_8gpu.yaml
examples/qwen3-1.7b/: qwen3_1_7b_clip_base.yaml  qwen3_1_7b_clip_base_anyres.yaml  qwen3_1_7b_clip_base_anyres_pretrain.yaml  qwen3_1_7b_clip_base_anyres_stage2_full.yaml  qwen3_1_7b_clip_base_anyres_stage2_smoke.yaml  qwen3_1_7b_clip_base_stage2_full.yaml  qwen3_1_7b_clip_base_stage2_smoke.yaml
prompts/eval/: llava_apertus_default_system_prompt.txt
scripts/: analyse_dataset.py  apply_broken_images_to_skipped_cache.py  check_deepspeed_checkpoint_finiteness.py  download_llava_instruct_images.sh  download_llava_pretrain.sh  extract_pangea_ins.sh  extract_skipped_image.py  inspect_vqa_answer_lengths.py  push_datasets_to_hf.py  smoke_image_text_generation.py  validate_gpu_components.py
scripts/eval/: aggregate_lm_eval_results.py  aggregate_lmms_results.py  aggregate_vlmevalkit_results.py  render_lm_eval_multilingual_table.py
scripts/utils/: convert_llava_next_to_llava_anything.py  convert_llava_to_llava_anything.py  report_harmbench_scores.py
src/llava_anything/: __init__.py  auto.py  builder.py  configuration_llava_anything.py  dataset.py  inference.py  modeling_llava_anything.py  open_clip_vision.py  processing_llava_anything.py  training.py
src/llava_anything/eval/: __init__.py  lmms.py
tests/: conftest.py  test_config_and_model.py  test_convert_llava.py  test_convert_llava_next.py  test_eval_aggregation_scripts.py  test_full_save_load.py  test_harmbench_integration.py  test_harmbench_score_report.py  test_legacy_chat_templates.py  test_lmms_eval_integration.py  test_open_clip_vision.py  test_package_metadata.py  test_pipeline.py  test_processor.py  test_push_datasets_to_hf.py  test_tiny_integration.py  test_training.py  test_vlmevalkit_integration.py
