[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llava-anything"
version = "0.1.0"
description = "Hugging Face-native LLaVA-style composition for turning Transformers LLMs into VLMs."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "LLaVa-Anything contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=0.26",
    "torch",
    "torchvision",
    "transformers>=5.8.1",
    "huggingface-hub>=0.34",
    "datasets>=2.16",
    "pillow>=10",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
wandb = [
    "wandb>=0.17",
]
deepspeed = [
    "deepspeed>=0.19.1",
]
openclip = [
    "open_clip_torch>=3.3",
]
eval = [
    "lmms_eval @ git+https://github.com/naufalso/lmms-eval.git@c772e920e79b2afa3c092b78437edfb3ce399e5f",
]

[project.entry-points."lmms_eval.models"]
llava_anything = "llava_anything.eval.lmms:manifest"

[project.scripts]
llava-anything-build = "llava_anything.builder:main"
llava-anything-infer = "llava_anything.inference:main"
llava-anything-train = "llava_anything.training:main"
llava-anything-pretrain = "llava_anything.training:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
